# serializer version: 1
# name: test_sensor_snapshot[sensor.axle_energy_event_end-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.axle_energy_event_end',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Event end',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TIMESTAMP: 'timestamp'>,
    'original_icon': None,
    'original_name': 'Event end',
    'platform': 'axle',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'end',
    'unique_id': 'test-entry_end',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_snapshot[sensor.axle_energy_event_end-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'timestamp',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Axle Energy Event end',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.axle_energy_event_end',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2026-09-11T18:00:00+00:00',
  })
# ---
# name: test_sensor_snapshot[sensor.axle_energy_event_start-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.axle_energy_event_start',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Event start',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TIMESTAMP: 'timestamp'>,
    'original_icon': None,
    'original_name': 'Event start',
    'platform': 'axle',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'start',
    'unique_id': 'test-entry_start',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_snapshot[sensor.axle_energy_event_start-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'timestamp',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Axle Energy Event start',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.axle_energy_event_start',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2026-09-11T17:00:00+00:00',
  })
# ---
# name: test_sensor_snapshot[sensor.axle_energy_import_export-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'import',
        'export',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.axle_energy_import_export',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Import / Export',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': None,
    'original_name': 'Import / Export',
    'platform': 'axle',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'import_export',
    'unique_id': 'test-entry_import_export',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_snapshot[sensor.axle_energy_import_export-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'enum',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Axle Energy Import / Export',
      <SensorEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'import',
        'export',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.axle_energy_import_export',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'export',
  })
# ---
